Refactor annotationModel, Reimplement get route